<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/listBackground">

        <TextView
            android:id="@+id/tv_team_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/home"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/tv_score_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_team_away"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/away"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_score_away"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_team_home"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/arrow_away"
            app:layout_constraintEnd_toStartOf="@+id/tv_next_date"
            app:layout_constraintTop_toTopOf="@+id/arrow_home"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/tv_next_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.35000002" />

        <TextView
            android:id="@+id/tv_score_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/score_home"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_team_home"
            app:layout_constraintEnd_toStartOf="@+id/arrow_home"
            app:layout_constraintTop_toTopOf="@+id/tv_team_home"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_score_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/score_away"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_team_away"
            app:layout_constraintEnd_toStartOf="@+id/arrow_away"
            app:layout_constraintTop_toTopOf="@+id/tv_team_away"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/arrow_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="@+id/tv_score_home"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/tv_score_home"
            app:srcCompat="@drawable/triangle" />

        <ImageView
            android:id="@+id/arrow_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="@+id/tv_score_away"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/tv_score_away"
            app:srcCompat="@drawable/triangle" />

        <TextView
            android:id="@+id/tv_fav_match_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/tv_next_date"
            app:layout_constraintStart_toStartOf="@+id/tv_next_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_next_date"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>